# information-retrieval

./: .gitignore  CMakeLists.txt  Dockerfile  FlatFileMap.hpp  LICENSE  ListNode.hpp  README.md  downloader.py  inference_server.py  main.cpp
app/: go.mod
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: main.tsx
frontend/src/lib/: http.ts
frontend/src/pages/: search.tsx
index/: DocumentNodeMinHeap.cpp  DocumentNodeMinHeap.hpp  EmbeddedDocumentNode.cpp  EmbeddedDocumentNode.hpp  EmbeddedDocumentNodeList.cpp  EmbeddedDocumentNodeList.hpp  FlatFileMap.hpp  FlatIVFIndex.cpp  FlatIVFIndex.hpp  ListNode.hpp
inference/: inference.cpp  inference.hpp
serializer/: utils.cpp  utils.hpp
